fix jumpy stake edge case

--- a/src/routes/staking/node-list.scss
+++ b/src/routes/staking/node-list.scss
@@ -17,7 +17,12 @@
     }
   }
 
+  a {
+    max-width: 400px;
+  }
+
   table {
+    flex: 1;
     font-size: 14px;
   }
 
